Docker image and container setup plus GCP

--- a/.env
+++ b/.env
@@ -7,10 +7,10 @@ EVALUATION_START_DATE=2015-03-01
 GCP_PROJECT_WAGON=wagon-public-datasets
 # Your personal GCP project for this bootcamp
 GCP_PROJECT=master-rhino-340118
-GCP_REGION=europe-west1
+GCP_REGION=eu.gcr.io
 
 # Cloud Storage
-BUCKET_NAME=taxifare_sarah-carr
+BUCKET_NAME=cowrite_sarah-carr
 
 # BigQuery
 BQ_REGION=EU
@@ -21,12 +21,12 @@ INSTANCE=taxi-instance
 
 # Model Lifecycle
 MLFLOW_TRACKING_URI=https://mlflow.lewagon.ai
-MLFLOW_EXPERIMENT=taxifare_experiment_Sarah-carr
-MLFLOW_MODEL_NAME=taxifare_lewagon
+MLFLOW_EXPERIMENT=cowrite_experiment_Sarah-carr
+MLFLOW_MODEL_NAME=cowrite_lewagon
 
-PREFECT_FLOW_NAME=taxifare_lifecycle_Sarah-carr
+PREFECT_FLOW_NAME=cowrite_lifecycle_Sarah-carr
 PREFECT_LOG_LEVEL=WARNING
 
-GCR_IMAGE='docker_taxifare'
-GCR_REGION= "eu.gcr.io"
+GCR_IMAGE='cowrite'
+#GCR_REGION= "eu.gcr.io"
 GCR_MEMORY= "2Gi"
