--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
 matplotlib
 pygeohash
 pytest
-# seaborn
-# numpy==1.23.5
-# pandas==1.5.3
-# scipy==1.10.0
-# scikit-learn==1.2.1
+seaborn
+numpy==1.23.5
+pandas==1.5.3
+scipy==1.10.0
+scikit-learn==1.2.1
 google-cloud-bigquery
 google-cloud-storage
 db-dtypes
